# loggerloader

./: .travis.yml  LICENSE.txt  LoggerLoaderGUI_Instructions.md  README.md  SCR BARO_2018_04_24.xle  llgui.spec  llguidir.spec  loggerloader_tbx.MultBarometerImport.pyt.xml  loggerloader_tbx.MultTransducerImport.pyt.xml  loggerloader_tbx.SimpleBaroDriftFix.pyt.xml  loggerloader_tbx.SimpleBaroFix.pyt.xml  loggerloader_tbx.SingleTransducerImport.pyt.xml  loggerloader_tbx.XLERead.pyt.xml  loggerloader_tbx.pyt  loggerloader_tbx.pyt.xml  pyproject.toml  requirements  requirements.txt  setup.py  setup.spec  sh.exe.stackdump  test_out.csv.xml  test_out2.csv.xml
data_files/: manmeas.csv  ugs_ngwmn_monitoring_locations.csv
loggerloader/: __init__.py  arcstuff.py  config.py  data_fixers.py  drifting.py  header_tables.py  llgui.py  llgui_V2.py  loader.py  loggerloader.py  loggerloader_tbx.MultBarometerImport.pyt.xml  loggerloader_tbx.MultTransducerImport.pyt.xml  loggerloader_tbx.pyt  loggerloader_tbx.pyt.xml  loggerloaderrevamp.ui  menu.py  pandastablemods.py  plotly_tk_vis.py  processing_functions.py  processing_plots.py  scratch2.py  transport.py  utilities.py  views.py
loggerloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: 1037276_Pw10a_2017_08_16.xle  PW10b 20180801.xle  SCR-1_2018_04_24.xle  __init__.py  manual_measurements_example_file.csv  manual_measurements_master.xlsx  pw02a 20170308.csv  pw10a 20171208.xle  pw10baro 20171208.xle  test.py  usgsP.csv
test/test_out/: test_out.csv  (+1 more)
tests/: drifting_test.py  test_loader.py  test_loader2.py  test_loader3.py
(+10 files in other folders)
