[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
version = "2020.0.0"
dependencies = {file = "requirements.txt"}
name = "loggerloader"
requires-python = ">= 3.8"
authors = [{name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}]
maintainers = [{name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}]
description = "Import and process transducer data; hydrograph analysis; hydrology;"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["well", "groundwater", "transducer"]

[project.urls]
Homepage = "https://github.com/utah-geological-survey/loggerloader"
Issues = "https://github.com/utah-geological-survey/loggerloader/issues"